# smotdm

./: .gitignore  Makefile  README.md  playground.ipynb  pyproject.toml
smotdm/data/: __init__.py  motionx.py
